[tool.poetry]
name = "дрёмин д-а- купрсовая №3"
version = "0.1.0"
description = ""
authors = ["Дмитрий Дрёмин <dremin.da24108292@gmail.com>"]
readme = "README.md"
packages = [{include = "дрёмин д"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
